Alignment issue fixed

--- a/style.css
+++ b/style.css
@@ -204,6 +204,7 @@
 .metrics-assets {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 48px;
 }
 .metrics-assets > img {
@@ -229,6 +230,7 @@
   gap: 2rem;
 }
 .content-div {
+  max-width: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -422,6 +424,9 @@ hr {
   .content .para-normal {
     margin-top: 1.5rem;
   }
+  .metrics-assets {
+    text-align: center;
+  }
 }
 
 @media (min-width: 1100px) {
@@ -480,19 +485,27 @@ hr {
     width: 100%;
   }
   .metrics-assets {
+    margin: 0 auto;
+    max-width: fit-content;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    padding: 0 1%;
   }
   .metrics-content {
-    align-items: center;
     display: grid;
     grid-template-columns: 1fr 1fr;
+  }
+  .metrics-content .content-div {
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
   }
   .metrics-assets > img {
     height: 560px;
     width: 560px;
     align-self: center;
-    padding: 0 1%;
+    padding: 0;
   }
 
   .contact {
